<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>waterlinked_a50_ros_driver</name>
  <version>0.1.0</version>
  <description>The waterlinked_a50_ros_driver package</description>
  
  <maintainer email="roza.gkliva@ttu.ee">Roza Gkliva</maintainer>
  <license>MIT</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <url type="website">https://waterlinked.com/product/dvl-a50</url>

  <depend>waterlinked_a50_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
